--- a/teste-formulario/forulario.html
+++ b/teste-formulario/forulario.html
@@ -16,7 +16,7 @@
 
       <form action="../menu/Quem é Victor.html" method="post" autocomplete="on">
         
-        <!-- <p><label for="nome">Nome :</label> -->
+        <p><label for="nome">Nome :</label>
           <input class="nome" type="text" name="nome" id="nome" size="20" minlength="1" placeholder="Digite Seu Nome">
         </p>
 
