alteraçõeS NOS BOTÕES

--- a/menu/objetivo.html
+++ b/menu/objetivo.html
@@ -28,7 +28,8 @@
         e ganhar muito dinheiro com isso, desde já agradeço a sua compreensão.</p>
 
     <div class="botoes">
-        <a href="Quem é Victor.html"><button>VOLTAR</button></a>
+        <a href="Quem é Victor.html"><button>HOME</button></a>
+        <a href="trabalho.html"><button>VOLTAR</button></a>
         <a href="../teste-formulario/forulario.html"> <button>SAIR</button></a>
     </div>
 </body>
