--- a/menu/trabalho.html
+++ b/menu/trabalho.html
@@ -27,7 +27,9 @@
 		faço entregas de Delivey na cidade de Buritizeiro e Pirapora. </p>
 
 	<div class="botoes">
-		<a href="Quem é Victor.html"><button>VOLTAR</button></a>
+		<a href="Quem é Victor.html"><button>HOME</button></a>
+		<a href="sobre mim.html"><button>VOLTAR</button></a>
+		<a href="objetivo.html"><button>PROXIMO</button></a>
 		<a href="../teste-formulario/forulario.html"> <button>SAIR</button></a>
 	</div>
 </body>
