--- a/menu/apresentacao.html
+++ b/menu/apresentacao.html
@@ -25,7 +25,8 @@
         meu perfil como futuro programador e sócio.</p>
 
     <div class="botoes">
-        <a href="Quem é Victor.html"><button>VOLTAR</button></a>
+        <a href="Quem é Victor.html"><button>HOME</button></a>
+        <a href="sobre mim.html"><button>PROXIMO</button></a>
         <a href="../teste-formulario/forulario.html"> <button>SAIR</button></a>
     </div>
 
