--- a/menu/sobre mim.html
+++ b/menu/sobre mim.html
@@ -27,7 +27,9 @@
         trabalhar.</p>
 
     <div class="botoes">
-        <a href="Quem é Victor.html"><button>VOLTAR</button></a>
+        <a href="Quem é Victor.html"><button>HOME</button></a>
+        <a href="apresentacao.html"><button>VOLTAR</button></a>
+        <a href="trabalho.html"><button>PROXIMO</button></a>
         <a href="../teste-formulario/forulario.html"> <button>SAIR</button></a>
     </div>
 </body>
